Updates Java to 21
Signed-off-by: Laird Nelson <ljnelson@gmail.com>